--- a/GoogleSearchAnalytics.Rmd
+++ b/GoogleSearchAnalytics.Rmd
@@ -145,8 +145,20 @@ ausdruck_united %>%
 
 ```{r}
 
-topics <- read_csv("zhch_topics_a-z.csv") %>% data.frame() %>% select(-X1)
+topics <- read_csv("zhch_topics_a-z.csv") %>% data.frame() %>% 
+          select(-X1) %>% 
+          mutate_all(tolower)
 
+# topics that do occur in search terms (exact matches only)
+topics %>% 
+    left_join(begriffe, by=c("Thema"="word")) %>% 
+    group_by(Thema) %>% 
+    summarize(clicks=sum(Klicks)) %>% 
+    arrange(desc(clicks))
+
+# topics that do not occur (no exat matches)
+nomatches <-topics %>% 
+            anti_join(begriffe, by=c("Thema"="word"))
 
 ```
 
