--- a/data_clustering.Rmd
+++ b/data_clustering.Rmd
@@ -57,6 +57,49 @@ data2 <- data %>%
 
 ```
 
+```{r}
+library(SPARQL)
+
+endpoint <- "https://ld.geo.admin.ch/query"
+
+query <- "PREFIX schema: <http://schema.org/>
+PREFIX gn: <http://www.geonames.org/ontology#>
+PREFIX geo: <http://www.opengis.net/ont/geosparql#>
+PREFIX dct: <http://purl.org/dc/terms/>select ?Municipality ?Name ?WKT where{
+?Municipality a gn:A.ADM3 .
+?Municipality schema:name ?Name .
+?Municipality dct:issued ?Date .
+?Municipality gn:parentADM1 ?InCanton .
+?InCanton schema:name ?CantonName .
+?Municipality geo:hasGeometry ?Geometry .
+##?Geometry geo:asWKT ?WKT .
+FILTER (?Date = \"2018-01-01\"^^xsd:date)
+FILTER (?CantonName = \"Zürich\")}"
+
+
+qd <- SPARQL(endpoint,query)
+
+
+PREFIX schema: <http://schema.org/>
+PREFIX gn: <http://www.geonames.org/ontology#>
+PREFIX geo: <http://www.opengis.net/ont/geosparql#>
+PREFIX dct: <http://purl.org/dc/terms/>
+select ?Municipality ?Name ?WKT
+where
+{
+?Municipality a gn:A.ADM3 .
+?Municipality schema:name ?Name .
+?Municipality dct:issued ?Date .
+?Municipality gn:parentADM1 ?InCanton .
+?InCanton schema:name ?CantonName .
+?Municipality geo:hasGeometry ?Geometry .
+##?Geometry geo:asWKT ?WKT .
+FILTER (?Date = "2018-01-01"^^xsd:date)
+FILTER (?CantonName = "Zürich")  
+}
+
+```
+
 
 # Word stem
 
